sort.basic.lessons.sort.basic.comb.AlgCombSort.scala.error
AlgCombSort:11: error: ';' expected but double literal found.
      ecart=(double)ecart/1.3
                          ^